--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 							<li class="active"><a href="index.html">Leonard Hawkes</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="http://www.linkedin.com/in/leonardhawkes/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="http://www.github.com/LeonardHawkes" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -86,13 +86,13 @@
 						<section class="split contact">
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">leonardhawkesjr@gmail.com</a></p>
+								<p><a href="mailto:leonardhawkesjr@gmail.com">leonardhawkesjr@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="http://www.linkedin.com/in/leonardhawkes/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="http://www.github.com/LeonardHawkes" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
