--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 						<ul class="icons">
 							<li><a href="http://www.linkedin.com/in/leonardhawkes/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="http://www.github.com/LeonardHawkes" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/LeonardHawkes/resume/raw/main/LeonardHawkesResume.pdf" class="icon brands alt fa-adobe"><span class="label"><Resume</span></a></li>
 						</ul>
 					</nav>
 
@@ -93,6 +94,7 @@
 								<ul class="icons alt">
 									<li><a href="http://www.linkedin.com/in/leonardhawkes/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="http://www.github.com/LeonardHawkes" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/LeonardHawkes/resume/raw/main/LeonardHawkesResume.pdf" class="icon brands alt fa-adobe"><span class="label"><Resume</span></a></li>
 								</ul>
 							</section>
 						</section>
