--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						<section class="split contact">
 							<section>
 								<h3>Email</h3>
-								<p><a href="mailto:leonardhawkesjr@gmail.com">leonardhawkesjr@gmail.com</a></p>
+								<p><a href="mailto:leonardhawkesjr@gmail.com?subject=Job%20Offer">leonardhawkesjr@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
