--- a/index.html
+++ b/index.html
@@ -40,29 +40,29 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-							<article class="post featured">
+							 <article class="post featured">
 								<header class="major">
 									<h2><a href="#">My name is Leonard Hawkes</a></h2>
 									<p>I'm a passionate developer, but more importantly I'm passionate
 										about technology.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+							<!---	<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">Check it out</a></li>
 								</ul>
-							</article>
+							</article> -->
 
 						<!-- Posts -->
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Project 1<br />
-										ipsum faucibus</a></h2>
+										<h2><a href="#">Vtraxx<br />
+										Spotify Top 10 Track Generator</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://vtraxx.herokuapp.com" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<p>I created this app using Spotify's API combined with Node.js and javascript. After asking for the user's Spotify login, it gathers their most recent top 10 and displays it on a cassette tape.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/LeonardHawkes/vtraxx" class="button">View Code</a></li>
 									</ul>
 								</article>
 								<article>
@@ -87,7 +87,7 @@
 						<section class="split contact">
 							<section>
 								<h3>Email</h3>
-								<p><a href="mailto:leonardhawkesjr@gmail.com?subject=Job%20Offer">leonardhawkesjr@gmail.com</a></p>
+								<p><a href="mailto:leonardhawkesjr@gmail.com?subject=Job Offer">leonardhawkesjr@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
