--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 										<h2><a href="#">Vtraxx<br />
 										Spotify Top 10 Track Generator</a></h2>
 									</header>
-									<a href="https://vtraxx.herokuapp.com" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://vtraxx.herokuapp.com" class="image fit"><img src="short_term_vtraxx.png" alt="" /></a>
 									<p>I created this app using Spotify's API combined with Node.js and javascript. After asking for the user's Spotify login, it gathers their most recent top 10 and displays it on a cassette tape.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LeonardHawkes/vtraxx" class="button">View Code</a></li>
 									</ul>
 								</article>
-								<article>
+								<!-- <article>
 									<header>
 										<h2><a href="#">Project 2<br />
 										imperdiet lorem</a></h2>
@@ -75,7 +75,7 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
-								</article>
+								</article> -->
 							</section>
 
 						<!-- Footer -->
