--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 								<article>
 									<header>
 										<h2><a href="#">Vtraxx<br />
-										Spotify Top 10 Track Generator</a></h2>
+										Spotify Favorite Track Generator</a></h2>
 									</header>
 									<a href="https://vtraxx.herokuapp.com" class="image fit"><img src="images/short_term_vtraxx.png" alt="" /></a>
-									<p>I created this app using Spotify's API combined with Node.js and javascript. After asking for the user's Spotify login, it gathers their most recent top 10 and displays it on a cassette tape.</p>
+									<p>I created this app using Spotify's API combined with Node.js, javascript and some HTML5/CSS. After asking for the user's Spotify login, it gathers their most recent top 10 and displays it on a cassette tape.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LeonardHawkes/vtraxx" class="button">View Code</a></li>
 									</ul>
