--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 										<h2><a href="#">Vtraxx<br />
 										Spotify Favorite Track Generator</a></h2>
 									</header>
-									<a href="https://vtraxx.herokuapp.com" class="image fit"><img src="images/Vtraxx.jpeg" alt="" /></a>
+									<a href="https://vtraxx.herokuapp.com" class="image fit"><img src="images/Vtraxx.jpg" alt="" /></a>
 									<p>I created this app using Spotify's API combined with Node.js, javascript and some HTML5/CSS. After asking for the user's Spotify login, it gathers their most recent top 10 and displays it on a cassette tape.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LeonardHawkes/vtraxx" class="button">View Code</a></li>
