--- a/index.html
+++ b/index.html
@@ -57,25 +57,29 @@
 								<article>
 									<header>
 										<h2><a href="#">Vtraxx<br />
-										Spotify Favorite Track Generator</a></h2>
+										Spotify Top Track Generator</a></h2>
 									</header>
-									<a href="https://vtraxx.herokuapp.com" class="image fit"><img src="images/Vtraxx.jpg" alt="" /></a>
-									<p>I created this app using Spotify's API combined with Node.js, javascript and some HTML5/CSS. After asking for the user's Spotify login, it gathers their most recent top 10 and displays it on a cassette tape.</p>
+									<a href="https://vtraxx.herokuapp.com" class="image fit"><img src="images/short_term_vtraxx.png" alt="" /></a>
+									<p>I created this app using Spotify's API combined with Node.js and javascript. After asking for the user's Spotify login, it gathers their most recent top 10 and displays it on a cassette tape.
+										Orignally this generated 10 tracks but I reduced it to 5 for now so I could increase the font and make the tracks easier to read.
+									</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LeonardHawkes/vtraxx" class="button">View Code</a></li>
 									</ul>
 								</article>
-								<!-- <article>
+								 <article>
 									<header>
-										<h2><a href="#">Project 2<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="#">Flappy Bird<br />
+										Flappy Bird clone created in Java</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a class="image fit"><img src="images/FlappyBird.png" alt="" /></a>
+									<p>I created this in Java using Javax and implementing listeners. Unfortunately it cannot be run through HTML anymore but I designed it so users can click with the mouse or use the spacebar.
+										I removed the clickable feature from the picture so it doesn't cause confusion.
+									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/LeonardHawkes/FlappyBirdJava" class="button">View Code</a></li>
 									</ul>
-								</article> -->
+								</article> 
 							</section>
 
 						<!-- Footer -->
