--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 										<h2><a href="#">Vtraxx<br />
 										Spotify Top Track Generator</a></h2>
 									</header>
-									<a href="https://vtraxx.herokuapp.com" class="image fit"><img src="images/short_term_vtraxx.png" alt="" /></a>
+									<a href="https://vtraxx.herokuapp.com" class="image fit"><img src="images/Vtraxx.jpg" alt="" /></a>
 									<p>I created this app using Spotify's API combined with Node.js and javascript. After asking for the user's Spotify login, it gathers their most recent top 10 and displays it on a cassette tape.
 										Orignally this generated 10 tracks but I reduced it to 5 for now so I could increase the font and make the tracks easier to read.
 									</p>
