--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Vtraxx<br />
+										<h2><a href="https://vtraxx.herokuapp.com">Vtraxx<br />
 										Spotify Top Track Generator</a></h2>
 									</header>
 									<a href="https://vtraxx.herokuapp.com" class="image fit"><img src="images/Vtraxx.jpg" alt="" /></a>
@@ -69,7 +69,7 @@
 								</article>
 								 <article>
 									<header>
-										<h2><a href="#">Flappy Bird<br />
+										<h2><a href="https://github.com/LeonardHawkes/FlappyBirdJava">Flappy Bird<br />
 										Flappy Bird clone created in Java</a></h2>
 									</header>
 									<a class="image fit"><img src="images/FlappyBird.png" alt="" /></a>
