--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<!-- Featured Post -->
 							 <article class="post featured">
 								<header class="major">
-									<h2><a href="#">My name is Leonard Hawkes</a></h2>
+									<h2><a href="http://www.linkedin.com/in/leonardhawkes/">My name is Leonard Hawkes</a></h2>
 									<p>I'm a passionate developer, but more importantly I'm passionate
 										about technology.</p>
 								</header>
