--- a/index.html
+++ b/index.html
@@ -82,6 +82,20 @@
 										<li><a href="https://github.com/LeonardHawkes/FlappyBirdJava" class="button">View Code</a></li>
 									</ul>
 								</article> 
+								 <article>
+									<header>
+										<h2><a href="https://github.com/LeonardHawkes/JavaTest">Java Test<br />
+											<br>
+										10 Question Java Quiz</a></h2>
+									</header>
+									<a class="image fit"><img src="images/Java Test.png" alt="" /></a>
+									<p>I created this in Java using Javax swing and awt to create a JFrame and implementing listeners. I use arrays instead of a database so it doesn't require as much memory/I didn't feel it was necessary for the scope of this project.
+										This also cannot be run through HTML so I use a screenshot of the program as an image.
+									</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/LeonardHawkes/JavaTest" class="button">View Code</a></li>
+									</ul>
+								</article> 
 							</section>
 
 						<!-- Footer -->
