--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 										This also cannot be run through HTML so I use a screenshot of the program as an image.
 									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/LeonardHawkes/JavaTest" class="button">View Code</a></li>
+										<li><a href="https://github.com/LeonardHawkes/JavaTest/blob/main/JavaTest.java" class="button">View Code</a></li>
 									</ul>
 								</article> 
 							</section>
