--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 										I removed the clickable feature from the picture so it doesn't cause confusion.
 									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/LeonardHawkes/FlappyBirdJava" class="button">View Code</a></li>
+										<li><a href="https://github.com/LeonardHawkes/FlappyBirdJava/blob/main/Flappy%20Bird/src/flappyBird/FlappyBird.java" class="button">View Code</a></li>
 									</ul>
 								</article> 
 								 <article>
