--- a/index.html
+++ b/index.html
@@ -42,21 +42,17 @@
 						<!-- Featured Post -->
 							 <article class="post featured">
 								<header class="major">
-									<h2><a href="http://www.linkedin.com/in/leonardhawkes/">My name is Leonard Hawkes</a></h2>
+									<h2><a href="#">My name is Leonard Hawkes</a></h2>
 									<p>I'm a passionate developer, but more importantly I'm passionate
 										about technology.</p>
 								</header>
-							<!---	<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="#" class="button large">Check it out</a></li>
-								</ul>
-							</article> -->
+							</article> 
 
 						<!-- Posts -->
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://vtraxx.herokuapp.com">Vtraxx<br />
+										<h2><a href="">Vtraxx<br />
 											<br>
 										Spotify Top Track Generator</a></h2>
 									</header>
@@ -68,9 +64,22 @@
 										<li><a href="https://github.com/LeonardHawkes/vtraxx" class="button">View Code</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<h2><a href="">Covid-19 Tracker<br />
+										<br>
+										Coronavirus worldwide Cases</a></h2>
+									</header>
+									<a href= "https://covid-2021-tracker.herokuapp.com" class="image fit"><img src="images/Covid-19.jpg" alt="" /></a>
+									<p>I created this program using Java and Spring Framework. The application collects the global Covid-19 cases and displays it as a readable table.
+									</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/LeonardHawkes/coronavirus-tracker" class="button">View Code</a></li>
+									</ul>
+								</article>
 								 <article>
 									<header>
-										<h2><a href="https://github.com/LeonardHawkes/FlappyBirdJava">Flappy Bird<br />
+										<h2><a href="">Flappy Bird<br />
 											<br>
 										Flappy Bird clone created in Java</a></h2>
 									</header>
@@ -79,23 +88,23 @@
 										I removed the clickable feature from the picture so it doesn't cause confusion.
 									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/LeonardHawkes/FlappyBirdJava/blob/main/Flappy%20Bird/src/flappyBird/FlappyBird.java" class="button">View Code</a></li>
+										<li><a href="https://github.com/LeonardHawkes/FlappyBirdJava" class="button">View Code</a></li>
 									</ul>
 								</article> 
-								 <article>
+								<article>
 									<header>
-										<h2><a href="https://github.com/LeonardHawkes/JavaTest">Java Test<br />
-											<br>
+										<h2><a href="">Java Quiz<br />
+										<br>
 										10 Question Java Quiz</a></h2>
 									</header>
 									<a class="image fit"><img src="images/Java Test.png" alt="" /></a>
-									<p>I created this in Java using Javax swing and awt to create a JFrame and implementing listeners. I use arrays instead of a database so it doesn't require as much memory/I didn't feel it was necessary for the scope of this project.
+									<p>I created this in Javax swing and awt to create a JFrame and implementing listeners. I use array instead of a database so it doesn't require as much memory.
 										This also cannot be run through HTML so I use a screenshot of the program as an image.
 									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/LeonardHawkes/JavaTest/blob/main/JavaTest.java" class="button">View Code</a></li>
+										<li><a href="https://github.com/LeonardHawkes/JavaTest" class="button">View Code</a></li>
 									</ul>
-								</article> 
+								</article>
 							</section>
 
 						<!-- Footer -->
