--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="">Vtraxx<br />
+										<h2><a href="https://vtraxx.herokuapp.com">Vtraxx<br />
 											<br>
 										Spotify Top Track Generator</a></h2>
 									</header>
@@ -66,7 +66,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="">Covid-19 Tracker<br />
+										<h2><a href="https://covid-2021-tracker.herokuapp.com">Covid-19 Tracker<br />
 										<br>
 										Coronavirus worldwide Cases</a></h2>
 									</header>
