--- a/index.html
+++ b/index.html
@@ -17,22 +17,28 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>My Portfolio</h1>
-						<p>A showcase of my projects and my abilities.</p>
+						<h1></h1>
+						<p></p>
 					</div>
 
 				<!-- Header -->
+
+				<!-- Background -->
+				    <div class="stars"></div>
+					<div class="twinkling"></div> 
+					
 
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Leonard Hawkes</a></li>
+							<li class="active"><a href="">Leonard Hawkes</a></li>
+							<li class="active"><a href="#footer">Contact</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="http://www.linkedin.com/in/leonardhawkes/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="http://www.github.com/LeonardHawkes" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://github.com/LeonardHawkes/resume/raw/main/LeonardHawkesResumePrivate.pdf" class="icon brands alt fa-adobe"><span class="label"><Resume</span></a></li>
+							<li><a href="https://github.com/LeonardHawkes/resume/raw/main/LeonardHawkesResume.pdf" class="icon brands alt fa-adobe"><span class="label"><Resume</span></a></li>
 						</ul>
 					</nav>
 
@@ -42,9 +48,9 @@
 						<!-- Featured Post -->
 							 <article class="post featured">
 								<header class="major">
-									<h2><a href="#">My name is Leonard Hawkes</a></h2>
+									<h2><a href="https://www.linkedin.com/in/leonardhawkes/">My name is Leonard Hawkes</a></h2>
 									<p>I'm a passionate developer, but more importantly I'm passionate
-										about technology.</p>
+										about technology. This website is meant to showcase my skills and aptitude. </p>
 								</header>
 							</article> 
 
@@ -59,6 +65,8 @@
 									<a href="https://vtraxx.herokuapp.com" class="image fit"><img src="images/Vtraxx.jpg" alt="" /></a>
 									<p>I created this app using Spotify's API combined with Node.js and javascript. After asking for the user's Spotify login, it gathers their most recent top 10 and displays it on a cassette tape.
 										Orignally this generated 10 tracks but I reduced it to 5 for now so I could increase the font and make the tracks easier to read.
+										<br><br>
+										This project is important to me because I learned JavaScript as well as how to implement APIs
 									</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LeonardHawkes/vtraxx" class="button">View Code</a></li>
@@ -71,7 +79,9 @@
 										Coronavirus worldwide Cases</a></h2>
 									</header>
 									<a href= "https://covid-2021-tracker.herokuapp.com" class="image fit"><img src="images/Covid-19.jpg" alt="" /></a>
-									<p>I created this program using Java and Spring Framework. The application collects the global Covid-19 cases and displays it as a readable table.
+									<p>I created this program using Java and Spring Framework. The application collects the raw global Covid-19 cases and displays it as a readable table.
+										<br><br>
+										This project was interesting because I learned how to implement Spring into my Java code and utilizing Java 12 to host java applications on the internet.
 									</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LeonardHawkes/coronavirus-tracker" class="button">View Code</a></li>
@@ -123,7 +133,7 @@
 								<ul class="icons alt">
 									<li><a href="http://www.linkedin.com/in/leonardhawkes/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="http://www.github.com/LeonardHawkes" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://github.com/LeonardHawkes/resume/raw/main/LeonardHawkesResumePrivate.pdf" class="icon brands alt fa-adobe"><span class="label"><Resume</span></a></li>
+									<li><a href="https://github.com/LeonardHawkes/resume/raw/main/LeonardHawkesResume.pdf" class="icon brands alt fa-adobe"><span class="label"><Resume</span></a></li>
 								</ul>
 							</section>
 						</section>
