--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 										Coronavirus worldwide Cases</a></h2>
 									</header>
 									<a href= "https://covid-2021-tracker.herokuapp.com" class="image fit"><img src="images/Covid-19.jpg" alt="" /></a>
-									<p>I created this program using Java and Spring Framework. The application collects the raw global Covid-19 cases and displays it as a readable table.
+									<p>I created this program using Java 12, Spring Framework, and Maven automation. The application collects the raw global Covid-19 cases and displays it as a readable table.
 										<br><br>
-										This project was interesting because I learned how to implement Spring into my Java code and utilizing Java 12 to host java applications on the internet.
+										This project was interesting because I learned how to implement Spring into my Java code and utilizing Java 12 to host java applications on the internet. I also learned how to use Maven more efficiently.
 									</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LeonardHawkes/coronavirus-tracker" class="button">View Code</a></li>
