--- a/index.html
+++ b/index.html
@@ -79,23 +79,41 @@
 										Coronavirus worldwide Cases</a></h2>
 									</header>
 									<a href= "https://covid-2021-tracker.herokuapp.com" class="image fit"><img src="images/Covid-19.jpg" alt="" /></a>
-									<p>I created this program using Java 12, Spring Framework, and Maven automation. The application collects the raw global Covid-19 cases and displays it as a readable table.
+									<p>I created this program using Java and Spring Framework. The application collects the raw global Covid-19 cases and displays it as a readable table.
 										<br><br>
-										This project was interesting because I learned how to implement Spring into my Java code and utilizing Java 12 to host java applications on the internet. I also learned how to use Maven more efficiently.
+										This project was interesting because I learned how to implement Spring into my Java code and utilizing Java 12 to host java applications on the internet.
 									</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LeonardHawkes/coronavirus-tracker" class="button">View Code</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<h2><a href="">Snake<br />
+											<br>
+										Snake clone created in Java</a></h2>
+									</header>
+									<a class="image fit"><img src="images/SnakeGame.gif" alt="" /></a>
+									<p>I created this in Java using Javax and implementing listeners. The user moves the snake with the arrow keys. I used a for loop to increase the snake's size when it consumes the pixel
+										and created a score method to increment as you collect pixels.
+										<br><br>
+										I created collision detection for each side of the border(up, down, left, right) and also created a collision if the head of the snake touches any of the other body parts.
+									</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/LeonardHawkes/Snake" class="button">View Code</a></li>
+									</ul>
+								</article> 
 								 <article>
 									<header>
 										<h2><a href="">Flappy Bird<br />
 											<br>
 										Flappy Bird clone created in Java</a></h2>
 									</header>
-									<a class="image fit"><img src="images/FlappyBird.png" alt="" /></a>
-									<p>I created this in Java using Javax and implementing listeners. Unfortunately it cannot be run through HTML anymore but I designed it so users can click with the mouse or use the spacebar.
-										I removed the clickable feature from the picture so it doesn't cause confusion.
+									<a class="image fit"><img src="images/FlappyBird.gif" alt="" /></a>
+									<p>I created this in Java using Javax and implementing listeners. The user moves the bird by clicking or they can use the spacebar. The game will continue indefinitely and will continue generating random pipes
+										as obstacles
+										<br><br>
+										Since Chrome doesn't support Java Applications anymore I recorded some gameplay and converted said gameplay into a gif to demonstrate all the features.
 									</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LeonardHawkes/FlappyBirdJava" class="button">View Code</a></li>
@@ -107,9 +125,9 @@
 										<br>
 										10 Question Java Quiz</a></h2>
 									</header>
-									<a class="image fit"><img src="images/Java Test.png" alt="" /></a>
+									<a class="image fit"><img src="images/OnlineTest.gif" alt="" /></a>
 									<p>I created this in Javax swing and awt to create a JFrame and implementing listeners. I use array instead of a database so it doesn't require as much memory.
-										This also cannot be run through HTML so I use a screenshot of the program as an image.
+										This also cannot be run through HTML so I recorded myself running the application and converted it into a gif to demonstrate the questions available in the app.
 									</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LeonardHawkes/JavaTest" class="button">View Code</a></li>
