--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
 							<section class="posts">
 								<article>
 									<header>
+										<h2><a href="https://www.pilothelper.com">PilotHelper<br />
+											<br>
+										Secure chat application for pilots</a></h2>
+									</header>
+									<a href="https://www.pilothelper.com" class="image fit"><img src="images/PilotHelper.png" alt="" /></a>
+									<p>PilotHelper is a secure chat application designed to support pilots with real-time assistance. It features a custom GPT-powered AI assistant for contextual responses, MongoDB for message storage, and RESTful APIs for seamless data management. This project showcases expertise in state management, responsive UI design, and secure communication protocols.</p>
+								</article>
+								<article>
+									<header>
 										<h2><a href="https://vtraxx.herokuapp.com">Vtraxx<br />
 											<br>
 										Spotify Top Track Generator</a></h2>
